--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shri Balaji Agro Industries</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body style="
   margin:0;
-  font-family:Arial,Helvetica,sans-serif;
-  background:linear-gradient(135deg,#1a73e8 0%, #5aa7ff 60%, #e8f0fe 100%);
+  font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
+  background:#f5f5f5;
 ">
 
   <div style="
@@ -25,228 +26,231 @@
       max-width:420px;
       border-radius:22px;
       overflow:hidden;
-      box-shadow:0 10px 28px rgba(0,0,0,0.18);
-      background:transparent;
+      box-shadow:0 15px 35px rgba(0,0,0,0.12), 0 5px 15px rgba(0,0,0,0.08);
+      background:linear-gradient(135deg,#2d5a3d 0%, #28a745 50%, #d4edda 100%);
     ">
 
       <!-- Header -->
       <div style="
-        padding:22px 16px 16px;
+        padding:16px 16px 12px;
         text-align:center;
         color:#fff;
       ">
+        <!-- Logo -->
         <div style="
-          font-size:26px;
-          font-weight:900;
-          letter-spacing:1px;
-          line-height:1.15;
-          text-transform:uppercase;
-        ">
-          Shri Balaji<br/>Agro Industries
-        </div>
-
-        <div style="
-          margin-top:8px;
-          font-size:14px;
-          line-height:1.4;
-          opacity:0.95;
-        ">
-          Foundation &amp; Certified Seed Producer<br/>
-          and Custom Grading
-        </div>
-
-        <!-- Business details pills -->
-        <div style="
-          margin-top:14px;
           display:flex;
-          gap:8px;
           justify-content:center;
-          flex-wrap:wrap;
-          font-size:12px;
-          line-height:1.25;
-          color:#ffffff;
+          margin-bottom:8px;
         ">
-          <span style="padding:7px 12px;border-radius:999px;background:rgba(255,255,255,0.18);border:1px solid rgba(255,255,255,0.25);">
-            GSTIN: 08AABPF7268C1ZX
-          </span>
-          <span style="padding:7px 12px;border-radius:999px;background:rgba(255,255,255,0.18);border:1px solid rgba(255,255,255,0.25);">
-            Seed Lic.: 1292
-          </span>
-          <span style="padding:7px 12px;border-radius:999px;background:rgba(255,255,255,0.18);border:1px solid rgba(255,255,255,0.25);">
-            Plant Reg.: 126
-          </span>
+          <img src="logo.png" alt="Shri Balaji Agro Industries" style="
+            width:60px;
+            height:60px;
+            border-radius:12px;
+            border:2px solid rgba(255,255,255,0.3);
+            box-shadow:0 3px 8px rgba(0,0,0,0.15);
+          ">
+        </div>
+        
+        <div style="
+          font-size:20px;
+          font-weight:700;
+          letter-spacing:0.3px;
+          line-height:1.1;
+          text-transform:uppercase;
+          text-shadow:0 2px 4px rgba(0,0,0,0.1);
+          margin-bottom:4px;
+        ">
+          Shri Balaji Agro Industries
+        </div>
+
+        <div style="
+          font-size:13px;
+          line-height:1.3;
+          opacity:0.9;
+          font-weight:400;
+        ">
+          Foundation & Certified Seed Producer and Custom Grading
         </div>
       </div>
 
       <!-- Content -->
       <div style="
-        padding:14px;
+        padding:16px;
         display:grid;
-        gap:12px;
+        gap:16px;
       ">
 
-        <!-- Phone Numbers -->
+        <!-- Business Info -->
         <div style="
-          padding:14px;
-          border-radius:18px;
-          background:rgba(255,255,255,0.95);
+          padding:16px;
+          border-radius:16px;
+          background:rgba(255,255,255,0.98);
+          backdrop-filter:blur(10px);
           color:#202124;
+          border:1px solid rgba(255,255,255,0.2);
+          box-shadow:0 4px 12px rgba(0,0,0,0.08);
         ">
-
-          <div style="
-            display:grid;
-            grid-template-columns:40px 1fr;
-            gap:12px;
-            align-items:start;
-          ">
-            <div style="
-              width:40px;height:40px;border-radius:12px;
-              background:#e8f0fe;
-              display:flex;align-items:center;justify-content:center;
-              font-size:20px;
-            ">☎</div>
-
-            <div>
-              <div style="font-weight:900;font-size:15px;">Phone Numbers</div>
-
-              <div style="display:grid;gap:10px;margin-top:10px;">
-
-                <a href="tel:+919001727200" style="
-                  display:block;
-                  padding:12px;
-                  border-radius:14px;
-                  text-decoration:none;
-                  border:1px solid rgba(0,0,0,0.08);
-                  background:#fff;
-                  color:#202124;
-                ">
-                  <div style="font-weight:800;font-size:13px;color:#5f6368;">
-                    Mukesh Garhwal
-                  </div>
-                  <div style="font-weight:900;font-size:20px;color:#1a73e8;margin-top:4px;">
-                    9001727200
-                  </div>
-                </a>
-
-                <a href="tel:+919414037016" style="
-                  display:block;
-                  padding:12px;
-                  border-radius:14px;
-                  text-decoration:none;
-                  border:1px solid rgba(0,0,0,0.08);
-                  background:#fff;
-                  color:#202124;
-                ">
-                  <div style="font-weight:800;font-size:13px;color:#5f6368;">
-                    Ranveer Sunda
-                  </div>
-                  <div style="font-weight:900;font-size:20px;color:#1a73e8;margin-top:4px;">
-                    9414037016
-                  </div>
-                </a>
-
-                <a href="tel:01572299561" style="
-                  display:block;
-                  padding:12px;
-                  border-radius:14px;
-                  text-decoration:none;
-                  border:1px solid rgba(0,0,0,0.08);
-                  background:#fff;
-                  color:#202124;
-                ">
-                  <div style="font-weight:800;font-size:13px;color:#5f6368;">
-                    Landline
-                  </div>
-                  <div style="font-weight:900;font-size:20px;color:#1a73e8;margin-top:4px;">
-                    01572-299561
-                  </div>
-                </a>
-
-              </div>
+          <div style="font-weight:600;font-size:16px;margin-bottom:12px;color:#2d5a3d;">Business Info</div>
+          <div style="display:grid;gap:8px;">
+            <div style="display:flex;justify-content:space-between;align-items:center;padding:8px 0;border-bottom:1px solid #f0f0f0;">
+              <span style="font-weight:500;font-size:13px;color:#666;">GSTIN</span>
+              <span style="font-weight:600;font-size:13px;">08AABPF7268C1ZX</span>
             </div>
+            <div style="display:flex;justify-content:space-between;align-items:center;padding:8px 0;">
+              <span style="font-weight:500;font-size:13px;color:#666;">Seed License</span>
+              <span style="font-weight:600;font-size:13px;">1292</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Contact Numbers -->
+        <div style="
+          padding:16px;
+          border-radius:16px;
+          background:rgba(255,255,255,0.98);
+          backdrop-filter:blur(10px);
+          color:#202124;
+          border:1px solid rgba(255,255,255,0.2);
+          box-shadow:0 4px 12px rgba(0,0,0,0.08);
+        ">
+          <div style="font-weight:600;font-size:16px;margin-bottom:12px;color:#2d5a3d;">Contact Numbers</div>
+
+          <div style="display:grid;gap:12px;">
+
+            <a href="tel:+919001727200" style="
+              display:block;
+              padding:12px;
+              border-radius:12px;
+              text-decoration:none;
+              border:1px solid rgba(0,0,0,0.08);
+              background:#fff;
+              color:#202124;
+            ">
+              <div style="font-weight:600;font-size:13px;color:#666;">
+                Mukesh Garhwal
+              </div>
+              <div style="font-weight:700;font-size:18px;color:#28a745;margin-top:4px;">
+                9001727200
+              </div>
+            </a>
+
+            <a href="tel:+919414037016" style="
+              display:block;
+              padding:12px;
+              border-radius:12px;
+              text-decoration:none;
+              border:1px solid rgba(0,0,0,0.08);
+              background:#fff;
+              color:#202124;
+            ">
+              <div style="font-weight:600;font-size:13px;color:#666;">
+                Ranveer Sunda
+              </div>
+              <div style="font-weight:700;font-size:18px;color:#28a745;margin-top:4px;">
+                9414037016
+              </div>
+            </a>
+
+            <a href="tel:01572299561" style="
+              display:block;
+              padding:12px;
+              border-radius:12px;
+              text-decoration:none;
+              border:1px solid rgba(0,0,0,0.08);
+              background:#fff;
+              color:#202124;
+            ">
+              <div style="font-weight:600;font-size:13px;color:#666;">
+                Landline
+              </div>
+              <div style="font-weight:700;font-size:18px;color:#28a745;margin-top:4px;">
+                01572-299561
+              </div>
+            </a>
+
           </div>
         </div>
 
         <!-- Email -->
-        <a href="mailto:shribalajiagro116@gmail.com" style="
-          display:flex;
-          gap:12px;
-          align-items:center;
-          padding:14px;
-          border-radius:18px;
-          text-decoration:none;
-          background:rgba(255,255,255,0.95);
+        <div style="
+          padding:16px;
+          border-radius:16px;
+          background:rgba(255,255,255,0.98);
+          backdrop-filter:blur(10px);
           color:#202124;
+          border:1px solid rgba(255,255,255,0.2);
+          box-shadow:0 4px 12px rgba(0,0,0,0.08);
         ">
-          <div style="
-            width:40px;height:40px;border-radius:12px;
-            background:#e8f0fe;
-            display:flex;align-items:center;justify-content:center;
-            font-size:20px;
-          ">✉</div>
-
-          <div style="min-width:0;">
-            <div style="font-weight:800;font-size:13px;color:#5f6368;">
-              Email
-            </div>
+          <div style="font-weight:600;font-size:16px;margin-bottom:12px;color:#2d5a3d;">Email</div>
+          <a href="mailto:shribalajiagro116@gmail.com" style="
+            display:flex;
+            align-items:center;
+            justify-content:space-between;
+            text-decoration:none;
+            color:#202124;
+          ">
             <div style="
-              font-weight:900;
+              font-weight:600;
               font-size:14px;
-              color:#1a73e8;
-              margin-top:3px;
+              color:#28a745;
               word-break:break-word;
             ">
               shribalajiagro116@gmail.com
             </div>
-          </div>
-        </a>
-
-        <!-- Address -->
-        <div style="
-          display:flex;
-          gap:12px;
-          align-items:flex-start;
-          padding:14px;
-          border-radius:18px;
-          background:rgba(255,255,255,0.95);
-          color:#202124;
-        ">
-          <div style="
-            width:40px;height:40px;border-radius:12px;
-            background:#e8f0fe;
-            display:flex;align-items:center;justify-content:center;
-            font-size:20px;
-          ">📍</div>
-
-          <div>
-            <div style="font-weight:800;font-size:13px;color:#5f6368;">
-              Address
-            </div>
-            <div style="font-size:14px;line-height:1.35;margin-top:4px;">
-              Reg. Office F-116 Industrial Area, Sikar (Raj.)<br/>
-              Sikar, Rajasthan, India – 332001
-            </div>
-
-            <a
-              href="https://www.google.com/maps?q=27.586030640853796,75.1624576174997"
-              target="_blank"
-              rel="noopener"
-              style="
-                display:inline-block;
-                margin-top:10px;
-                padding:10px 14px;
-                border-radius:12px;
-                background:#1a73e8;
-                color:#fff;
-                text-decoration:none;
-                font-weight:900;
-              "
-            >
-              Open in Maps
-            </a>
-          </div>
+            <div style="background:#28a745;color:#fff;padding:6px 8px;border-radius:6px;font-size:12px;">✉️</div>
+          </a>
         </div>
 
+        <!-- Location -->
+        <div style="
+          padding:16px;
+          border-radius:16px;
+          background:rgba(255,255,255,0.98);
+          backdrop-filter:blur(10px);
+          color:#202124;
+          border:1px solid rgba(255,255,255,0.2);
+          box-shadow:0 4px 12px rgba(0,0,0,0.08);
+        ">
+          <div style="font-weight:600;font-size:16px;margin-bottom:12px;color:#2d5a3d;">Location</div>
+          <div style="font-size:14px;line-height:1.4;margin-bottom:12px;font-weight:400;">
+            F-116 Industrial Area,<br/>
+            Sikar, Rajasthan, India 332001
+          </div>
+
+          <a
+            href="https://www.google.com/maps?q=27.586030640853796,75.1624576174997"
+            target="_blank"
+            rel="noopener"
+            style="
+              display:flex;
+              align-items:center;
+              justify-content:center;
+              gap:6px;
+              padding:10px;
+              border-radius:8px;
+              background:#28a745;
+              color:#fff;
+              text-decoration:none;
+              font-weight:600;
+              font-size:13px;
+            "
+          >
+            📍 Directions
+          </a>
+        </div>
+
+      </div>
+
+      <!-- Footer -->
+      <div style="
+        padding:16px;
+        text-align:center;
+        color:rgba(255,255,255,0.8);
+        font-size:12px;
+        border-top:1px solid rgba(255,255,255,0.1);
+      ">
+        <div style="font-weight:600;margin-bottom:2px;">Shri Balaji Agro Industries</div>
+        <div style="opacity:0.8;">Quality Seeds • Trusted Service</div>
       </div>
     </div>
 
