--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               color:#202124;
             ">
               <div style="font-weight:600;font-size:13px;color:#666;">
-                Mukesh Garhwal
+                Mukesh Gadhwal
               </div>
               <div style="font-weight:700;font-size:18px;color:#28a745;margin-top:4px;">
                 9001727200
